<resources>
    <string name="km">KILOMETERS</string>
    <string name="minutes">MINUTES</string>
    <string name="kcal">kcal</string>
    <string name="open_bluetooth_device">Enable Bluetooth on your Android device</string>
    <string name="sleeps_hint_text">SLEEP TIME</string>
    <string name="sleeps_hint_hours">h</string>
    <string name="sleeps_hint_mins">m</string>
    <string name="goal">Goal:&#160;</string>
    <string name="range">Range</string>
    <string name="awake_time">Awake for</string>
    <string name="sleep_time">Fell Asleep in</string>
    <string name="awake_times">AWAKE</string>
    <string name="total_bed_time">Total sleep</string>
    <string name="times">times</string>
    <string name="sleep_time_err">Sleep time less than 10 minutes!</string>
    <string name="bar_title_steps">STEPS TAKEN</string>
    <string name="bar_title_distance">DISTANCE </string>
    <string name="bar_title_calories">CALORIES</string>
    <string name="bar_title_sleep">SLEPT</string>
    <string name="bar_goal">Goal</string>
    <string name="today">TODAY</string>
    <string name="today1">today</string>
    <string name="week">Week</string>
    <string name="months">Month</string>
    <string name="top_day">DAY</string>
    <string name="top_week">Week</string>
    <string name="top_month">Month</string>
    <string name="LastSynced">Last synced</string>
    <string name="Yesterday">yesterday</string>
    <string name="Battery">Battery</string>
    <string name="goals_title">Goals</string>
    <string name="my_daily_goals">MY DAILY GOALS</string>
    <string name="my_daily_steps">Step Goal</string>
    <string name="my_daily_distance">Distance Goal</string>
    <string name="my_daily_active_minutes">Active Minutes Goal</string>
    <string name="my_daily_calories">Calories Goal</string>
    <string name="my_daily_sleep">Sleep Goal in Hours</string>
    <string name="daily_goal">DAILY GOAL</string>
    <string name="reminds_title">Reminders</string>
    <string name="steps">Steps</string>
    <string name="steps1">Steps</string>
    <string name="remind_time">Time</string>
    <string name="repeat">Custom Repeat</string>
    <string name="sport">Break Time</string>
    <string name="sleep">Sleep</string>
    <string name="eat">Meal Time</string>
    <string name="medicine">Medicine</string>
    <string name="note_type_no">Please select reminder type</string>
    <string name="select_day_no">Select the day you want the reminder to repeat</string>
    <string name="notes_max_20">No more than 10 reminders</string>
    <string name="every_day">Everyday</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tues</string>
    <string name="monday">Mon</string>
    <string name="add_new_reminder">ADD NEW REMINDER</string>
    <string name="wake_up">Wake up</string>
    <string name="add_note">Add a note</string>
    <string name="reminder_mon">Mon</string>
    <string name="reminder_tues">Tues</string>
    <string name="reminder_wed">Wed</string>
    <string name="reminder_thu">Thu</string>
    <string name="reminder_fri">Fri</string>
    <string name="reminder_sat">Sat</string>
    <string name="reminder_sun">Sun</string>
    <string name="reminder_save">Save</string>
    <string name="reminder_edit">Edit</string>
    <string name="reminder_am">am</string>
    <string name="reminder_pm">pm</string>
    <string name="reminder_m">Mon</string>
    <string name="reminder_tu">Tue</string>
    <string name="reminder_w">Wed</string>
    <string name="reminder_th">Thu</string>
    <string name="reminder_f">Fri</string>
    <string name="reminder_sa">Sat</string>
    <string name="reminder_su">Sun</string>
    <string name="edit">Edit</string>
    <string name="reminder_done">Save</string>
    <string name="settings_title">Settings</string>
    <string name="setting_lang">Language</string>
    <string name="base_setting">MY PROFILE</string>
    <string name="base_setting1">Account</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="notification1">Notifications</string>
    <string name="advanced_setting">ADVANCED SETTINGS</string>
    <string name="advanced_setting1">Settings</string>
    <string name="help">HELP</string>
    <string name="help1">Help</string>
    <string name="set_up_device">CONNECT L28H</string>
    <string name="sleep_goal">Goal</string>
    <string name="about_app">ABOUT US</string>
    <string name="logout">Log out</string>
    <string name="OK">Ok</string>
    <string name="sex">Gender</string>
    <string name="date_of_birth">Birthday</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="done">Done</string>
    <string name="gender">Gender</string>
    <string name="terms_service">Terms of service</string>
    <string name="zefit_version">L28H App Version</string>
    <string name="copyright">  Copyright,Kronoz LLC\n  All Rights Reserved</string>
    <string name="time_hour">hours</string>
    <string name="pedometer">3PLUS</string>
    <string name="remove">Deregister device</string>
    <string name="debuginfo">Debug info</string>
    <string name="remove_hint">UNPAIR ?</string>
    <string name="turn_on_bluetooth_content">Enable Bluetooth on your Android device</string>
    <string name="next">NEXT</string>
    <string name="device_searching">Pair Device</string>
    <string name="binddevice">Set up a new device</string>
    <string name="about_app_title">ABOUT US</string>
    <string name="login_introduce">3PLUS IS AN ULTRA-THIN ALUMINUM CONNECTED WATCH WITH TOUCHSCREEN THAT TRACKS YOUR DAILY ACTIVITY AND SLEEP QUALITY. \n3PLUS SHOWS NOTIFICATIONS OF CALLS, SMS, EMAILS, CALENDAR EVENTS AND SOCIAL MEDIA ACTIVITY.</string>
    <string name="btn_reg">Sign up for New Users</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_login">Login for Returning Users</string>
    <string name="reg_username">Username</string>
    <string name="reg_name">Name</string>
    <string name="reg_email">  Email</string>
    <string name="reg_password">  Password(at least 6 characters)</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="reg_height">Height</string>
    <string name="reg_weight">Weight</string>
    <string name="reg_birthday">Birthday</string>
    <string name="reg_country">Country</string>
    <string name="reg_protocol"> Terms of Service  </string>
    <string name="reg_protocol1">  Privacy  Policy  </string>
    <string name="reg_username_null">Must input username</string>
    <string name="reg_email_null">Must input email address</string>
    <string name="reg_password_null">Must input password</string>
    <string name="reg_gender_null">Please choose gender</string>
    <string name="reg_height_null">Must input height</string>
    <string name="reg_weight_null">Must input weight</string>
    <string name="reg_birthday_null">Must input birthdate</string>
    <string name="reg_email_wrong">Wrong email format</string>
    <string name="login_loading">Loading</string>
    <string name="login_username_wrong">Email or password isn\'t right</string>
    <string name="login_forgot_password">Forgot Your Password</string>
    <string name="not_support_password">Does not support password</string>
    <string name="password_length">Please input password between 6 to 16 character</string>
    <string name="read_protocol">Please read and confirm the user protocol</string>
    <string name="email_exist">Email address already in use</string>
    <string name="s_public_open_gps_tip">Because your phone system is based on Android 6.0 above,please turn on locations in phone system to continue.</string>
    <string name="nickname_exist">Username already in use</string>
    <string name="reset_password">RESET MY PASSWORD</string>
    <string name="about_app_content">about .</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="curpwd">Enter Current Password</string>
    <string name="newpwd">Enter New Password</string>
    <string name="inputoldpassword">Must input current password</string>
    <string name="inputnewpassword">Must input new password</string>
    <string name="inputrepeatedpassword">Must input confirmed password</string>
    <string name="mustselectcountry">Must select a country</string>
    <string name="oldincorrect">The old password is incorrect</string>
    <string name="notconformity">The password is not conformity with the one you input just now</string>
    <string name="revisedsuccessfully">Revised successfully</string>
    <string name="country">Country</string>
    <string name="dateform">TIME FORM</string>
    <string name="timeformat">CLOCK TYPE</string>
    <string name="weightunits">Weight Units</string>
    <string name="hour12">12-Hour</string>
    <string name="hour24">24-Hour</string>
    <string name="feetmiles">MILES</string>
    <string name="kilograms">Kilograms</string>
    <string name="kms">Km</string>
    <string name="miles">miles</string>
    <string name="minute">minutes</string>
    <string name="h">hr</string>
    <string name="m">min</string>
    <string name="pounds">Pounds</string>
    <string name="success">Successful</string>
    <string name="save">Saved</string>
    <string name="tips">Information</string>
    <string name="fts">Ruler</string>
    <string name="in">in</string>
    <string name="Algeria">Algeria</string>
    <string name="Andorra">Andorra</string>
    <string name="Argentina">Argentina</string>
    <string name="Armenia">Armenia</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Belgium">Belgium</string>
    <string name="Belarus">Belarus</string>
    <string name="Brazil">Brazil</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Canada">Canada</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Colombia">Colombia</string>
    <string name="Costa_Rica">Costa Rica</string>
    <string name="Croatia">Croatia</string>
    <string name="Cyprus">Cyprus</string>
    <string name="Czech_Republic">Czech Republic</string>
    <string name="Denmark">Denmark</string>
    <string name="Deutschland">Deutschland</string>
    <string name="Dominican_Republic">Dominican Republic</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="off">Off</string>
    <string name="update_firmware_zefit_available">A new version of 3PLUS is available!</string>
    <string name="update_firmware_title">To update 3PLUS software, please follow these steps:\n </string>
    <string name="update_firmware_followstep">Follow these steps: </string>
    <string name="update_firmware_visit">Visit </string>
    <string name="update_firmware_website">http://appscomm.com/softwareAppDownload</string>
    <string name="update_firmware_hint1">Download and install 3PLUS software on your computer\n</string>
    <string name="update_firmware_hint2">Plug 3PLUS into a powered USB port\n</string>
    <string name="update_firmware_hint3">Updating 3PLUS can take 5 to 10 minutes</string>
    <string name="Download_now">Download now</string>
    <string name="weak">Weak</string>
    <string name="standard">Standard</string>
    <string name="strong">Strong</string>
    <string name="cent_kilometers">Kilograms &amp; kilometers</string>
    <string name="pound_miles">Pounds &amp; miles</string>
</resources>