<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/otherlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical" >

    <!-- topbar 标题显示 -->

    <FrameLayout
        android:id="@+id/pttopbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title" />

        <!-- 左边的按钮   android:onClick="btn_left_clicked" -->

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="15dip"
            android:background="@drawable/u_back"
            android:onClick="btn_return_clicked"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_xx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dip"
            android:background="@drawable/btn_xx"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.35"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/update_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/warn"
            android:lineSpacingExtra="5dp"
            android:text="@string/update_firmware_zefit_available"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgResult"
            android:layout_width="340dp"
            android:layout_height="140dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/l11_update" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/update_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/update_firmware_title"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp" >

            <TextView
                android:id="@+id/tvfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_firmware_followstep"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:background="@drawable/u1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/update_firmware_visit"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/update_firmware_website"
                android:textColorLink="#666666"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:background="@drawable/u2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/update_firmware_hint1"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:background="@drawable/u3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/update_firmware_hint2"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:background="@drawable/u4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/update_firmware_hint3"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_now"
            android:clickable="true"
            android:onClick="downloadNow"
            android:text="@string/Download_now"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>