<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">
    <!-- topbar 标题显示 -->

    <FrameLayout
        android:id="@+id/pttopbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/title" />

        <FrameLayout
            android:id="@+id/framelayout_top_right"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:layout_gravity="right|center_vertical">

            <!-- 右边的按钮: 返回1 -->

            <ImageButton
                android:id="@+id/btn_left1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="0dip"
                android:background="@drawable/topbtn_rebutn_btn_selector"
                android:clickable="true"
                android:onClick="btn_return1_clicked"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/btn_left2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="0dip"
                android:background="@drawable/topbtn_rebutn_btn_selector"
                android:clickable="false"
                android:onClick="btn_return2_clicked"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginRight="15dip"
                android:layout_marginTop="5dp"
                android:text="@string/reminder_save"
                android:textColor="#fff"
                android:textSize="22dip"
                android:visibility="gone" />

        </FrameLayout>
    </FrameLayout>


    <RelativeLayout
        android:id="@+id/layout_unit_miles"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:clickable="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:paddingLeft="10dip"
            android:text="@string/pound_miles"
            android:textColor="@android:color/white"
            android:textSize="18dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_units_miles"
            android:layout_width="@dimen/layout_y_20"
            android:layout_height="@dimen/layout_y_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/select_device2"
            android:visibility="visible" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/layout_unit_km"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:clickable="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:paddingLeft="10dip"
            android:text="@string/cent_kilometers"
            android:textColor="@android:color/white"
            android:textSize="18dip"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_units_km"
            android:layout_width="@dimen/layout_y_20"
            android:layout_height="@dimen/layout_y_20"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/select_device2"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="#cccccc" />


</LinearLayout>
